# proxy-manager

./: .env.example  .gitignore  Dockerfile  deploy.sh  docker-compose.yaml  pyproject.toml  setup.sh
.github/workflows/: deploy.yml
nginx/: app.template.conf
proxy_manager/: __init__.py
proxy_manager/api/: auth.py  routes.py
proxy_manager/models/: proxy.py  user.py
proxy_manager/services/: proxy_service.py  webshare_service.py
proxy_manager/ui/: forms.py  routes.py
proxy_manager/ui/static/js/: proxies.js
proxy_manager/ui/templates/: base.html  import.html  login.html  proxies.html
